Finish CSS for version 0.5

--- a/codekit-config.json
+++ b/codekit-config.json
@@ -2,24 +2,24 @@
   "CodeKitInfo" : "This is a CodeKit project configuration file. It is designed to sync project settings across multiple machines. Modifying the contents of this file can be a poor life decision if you don't know what you're doing. This file is not useful unless accompanied by the project that created it in CodeKit. For more information, see: http:\/\/incident57.com\/codekit",
   "creatorBuild" : "8248",
   "files" : {
-    "\/dev\/sass\/frameworks\/bourbon\/css3\/_appearance.scss" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/dev\/sass\/frameworks\/bourbon\/css3\/_appearance.scss",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 4,
-      "debugStyle" : 0
-    },
     "\/dev\/sass\/frameworks\/bourbon\/functions\/_render-gradients.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
       "inputAbbreviatedPath" : "\/dev\/sass\/frameworks\/bourbon\/functions\/_render-gradients.scss",
+      "outputStyle" : 0,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 4,
+      "debugStyle" : 0
+    },
+    "\/dev\/sass\/frameworks\/bourbon\/css3\/_appearance.scss" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/dev\/sass\/frameworks\/bourbon\/css3\/_appearance.scss",
       "outputStyle" : 0,
       "shouldRunBless" : 0,
       "outputAbbreviatedPath" : "No Output Path",
@@ -484,18 +484,6 @@
       "fileType" : 4,
       "debugStyle" : 0
     },
-    "\/dev\/sass\/frameworks\/neat\/grid\/_omega.scss" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/dev\/sass\/frameworks\/neat\/grid\/_omega.scss",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 4,
-      "debugStyle" : 0
-    },
     "\/dev\/sass\/frameworks\/_grid-settings.sass" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -506,6 +494,18 @@
       "shouldRunBless" : 0,
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 2,
+      "debugStyle" : 0
+    },
+    "\/dev\/sass\/frameworks\/neat\/grid\/_omega.scss" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/dev\/sass\/frameworks\/neat\/grid\/_omega.scss",
+      "outputStyle" : 0,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 4,
       "debugStyle" : 0
     },
     "\/dev\/sass\/frameworks\/bourbon\/css3\/_image-rendering.scss" : {
@@ -530,18 +530,6 @@
       "shouldRunBless" : 0,
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 4,
-      "debugStyle" : 0
-    },
-    "\/dev\/sass\/layouts\/_640.sass" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/dev\/sass\/layouts\/_640.sass",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2,
       "debugStyle" : 0
     },
     "\/dev\/sass\/frameworks\/bourbon\/addons\/_clearfix.scss" : {
@@ -626,6 +614,17 @@
       "fileType" : 4,
       "debugStyle" : 0
     },
+    "\/lib\/images\/darkgraynoise.png" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 0,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/lib\/images\/darkgraynoise.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/lib\/images\/darkgraynoise.png",
+      "initialSize" : 12530,
+      "fileType" : 8192
+    },
     "\/dev\/sass\/frameworks\/neat\/functions\/_new-breakpoint.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -637,17 +636,6 @@
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 4,
       "debugStyle" : 0
-    },
-    "\/lib\/images\/darkgraynoise.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/lib\/images\/darkgraynoise.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/lib\/images\/darkgraynoise.png",
-      "initialSize" : 12530,
-      "fileType" : 8192
     },
     "\/dev\/sass\/modules\/_links.sass" : {
       "ignoreWasSetByUser" : 0,
@@ -962,30 +950,6 @@
       "fileType" : 2,
       "debugStyle" : 0
     },
-    "\/dev\/sass\/base\/_reset.sass" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/dev\/sass\/base\/_reset.sass",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2,
-      "debugStyle" : 0
-    },
-    "\/dev\/sass\/layouts\/_1280.sass" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/dev\/sass\/layouts\/_1280.sass",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2,
-      "debugStyle" : 0
-    },
     "\/dev\/sass\/frameworks\/bourbon\/addons\/_hide-text.scss" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 1,
@@ -996,6 +960,18 @@
       "shouldRunBless" : 0,
       "outputAbbreviatedPath" : "No Output Path",
       "fileType" : 4,
+      "debugStyle" : 0
+    },
+    "\/dev\/sass\/base\/_reset.sass" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/dev\/sass\/base\/_reset.sass",
+      "outputStyle" : 0,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 2,
       "debugStyle" : 0
     },
     "\/dev\/sass\/frameworks\/bourbon\/css3\/_border-image.scss" : {
@@ -1022,17 +998,16 @@
       "fileType" : 4,
       "debugStyle" : 0
     },
-    "\/dev\/sass\/frameworks\/bourbon\/css3\/_radial-gradient.scss" : {
+    "\/lib\/images\/bg_direction_nav.png" : {
       "ignoreWasSetByUser" : 0,
-      "ignore" : 1,
+      "ignore" : 0,
       "hidden" : 0,
       "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/dev\/sass\/frameworks\/bourbon\/css3\/_radial-gradient.scss",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 4,
-      "debugStyle" : 0
+      "inputAbbreviatedPath" : "\/lib\/images\/bg_direction_nav.png",
+      "processed" : 0,
+      "outputAbbreviatedPath" : "\/lib\/images\/bg_direction_nav.png",
+      "initialSize" : 1866,
+      "fileType" : 8192
     },
     "\/dev\/sass\/modules\/_typography.sass" : {
       "ignoreWasSetByUser" : 0,
@@ -1046,6 +1021,18 @@
       "fileType" : 2,
       "debugStyle" : 0
     },
+    "\/dev\/sass\/frameworks\/bourbon\/css3\/_radial-gradient.scss" : {
+      "ignoreWasSetByUser" : 0,
+      "ignore" : 1,
+      "hidden" : 0,
+      "outputPathIsSetByUser" : 0,
+      "inputAbbreviatedPath" : "\/dev\/sass\/frameworks\/bourbon\/css3\/_radial-gradient.scss",
+      "outputStyle" : 0,
+      "shouldRunBless" : 0,
+      "outputAbbreviatedPath" : "No Output Path",
+      "fileType" : 4,
+      "debugStyle" : 0
+    },
     "\/lib\/js\/respond.js" : {
       "ignoreWasSetByUser" : 0,
       "ignore" : 0,
@@ -1056,29 +1043,6 @@
       "syntaxCheckerStyle" : 1,
       "outputAbbreviatedPath" : "\/lib\/js\/respond-ck.js",
       "fileType" : 64
-    },
-    "\/dev\/sass\/layouts\/_1025.sass" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/dev\/sass\/layouts\/_1025.sass",
-      "outputStyle" : 0,
-      "shouldRunBless" : 0,
-      "outputAbbreviatedPath" : "No Output Path",
-      "fileType" : 2,
-      "debugStyle" : 0
-    },
-    "\/lib\/images\/bg_direction_nav.png" : {
-      "ignoreWasSetByUser" : 0,
-      "ignore" : 0,
-      "hidden" : 0,
-      "outputPathIsSetByUser" : 0,
-      "inputAbbreviatedPath" : "\/lib\/images\/bg_direction_nav.png",
-      "processed" : 0,
-      "outputAbbreviatedPath" : "\/lib\/images\/bg_direction_nav.png",
-      "initialSize" : 1866,
-      "fileType" : 8192
     },
     "\/dev\/sass\/frameworks\/bourbon\/css3\/_perspective.scss" : {
       "ignoreWasSetByUser" : 0,
@@ -1274,7 +1238,7 @@
   },
   "projectAttributes" : {
     "bourbonEnabled" : 1,
-    "displayValue" : "devblog",
+    "displayValue" : "html",
     "displayValueWasSetByUser" : 0,
     "compassEnabled" : 1
   }
